--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -26,6 +26,7 @@ $color_palette: (
     LavenderIndigo: #9355fe,
     SunburntCyclops: #fd4448,
     Turquoise: #45ffca,
+    BlazeOrange: #ff6a00,
   ),
 );
 
@@ -35,3 +36,8 @@ $color_palette: (
 $font-primary: 'NeoDunggeunmo';
 $font-secondary: 'DNFBitBitv2';
 $font-tertiary: 'GasoekOne-Regular';
+
+//----------------------------------------//
+//-------------- 이미지 경로 --------------//
+//----------------------------------------//
+$main_src: '';
