--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -13,3 +13,11 @@
   src: url('//cdn.df.nexon.com/img/common/font/DNFBitBitv2.otf')
     format('opentype');
 }
+
+@font-face {
+  font-family: 'GasoekOne-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_JAMO@1.0/GasoekOne-Regular.woff2')
+    format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
