--- a/src/assets/scss/App.css
+++ b/src/assets/scss/App.css
@@ -344,13 +344,19 @@ button {
 .main {
   background: #1d1d1d;
 }
+.main .sc_hero {
+  /* 상·하단 흐르는 배너 */
+}
 .main .sc_hero .banner_line {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 0 60px;
+  overflow: hidden;
   padding: 12px 0;
   background: #246dc2;
+  /* 상단 배너 (왼쪽으로 이동) */
+  /* 하단 배너 (오른쪽으로 이동) */
 }
 .main .sc_hero .banner_line p {
   font-size: 30px;
@@ -359,7 +365,30 @@ button {
   line-height: 1.3;
   margin-bottom: -3px;
 }
-.main .sc_hero .banner_line > div {
+.main .sc_hero .banner_line .roller_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0 65px;
+}
+.main .sc_hero .banner_line .roller_wrap .rolling_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0 65px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.main .sc_hero .banner_line .roller_wrap .rolling_list > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -406,8 +435,116 @@ button {
             transform: translate3d(0);
   }
 }
-.main .sc_hero .banner_line > div:nth-child(even) p {
+.main .sc_hero .banner_line .roller_wrap .rolling_list > div:nth-child(even) p {
   color: #d0eb13;
+}
+.main .sc_hero .banner_line.left .rolling_list.original {
+  -webkit-animation: rollingLeft1 45s linear infinite;
+          animation: rollingLeft1 45s linear infinite;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@-webkit-keyframes rollingLeft1 {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  50% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+  50.01% {
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0);
+            transform: translate3d(0);
+  }
+}
+@keyframes rollingLeft1 {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  50% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+  50.01% {
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0);
+            transform: translate3d(0);
+  }
+}
+.main .sc_hero .banner_line.left .rolling_list.clone {
+  -webkit-animation: rollingLeft2 45s linear infinite;
+          animation: rollingLeft2 45s linear infinite;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@-webkit-keyframes rollingLeft2 {
+  0% {
+    -webkit-transition: translate3d(0, 0, 0);
+    transition: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-200%, 0, 0);
+            transform: translate3d(-200%, 0, 0);
+  }
+}
+@keyframes rollingLeft2 {
+  0% {
+    -webkit-transition: translate3d(0, 0, 0);
+    transition: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-200%, 0, 0);
+            transform: translate3d(-200%, 0, 0);
+  }
+}
+.main .sc_hero .banner_line.right .rolling_list.original {
+  -webkit-animation: rollingLeft1 45s linear infinite;
+          animation: rollingLeft1 45s linear infinite;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@keyframes rollingLeft1 {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  50% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+  }
+  50.01% {
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0);
+            transform: translate3d(0);
+  }
+}
+.main .sc_hero .banner_line.right .rolling_list.clone {
+  -webkit-animation: rollingLeft2 45s linear infinite;
+          animation: rollingLeft2 45s linear infinite;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+@keyframes rollingLeft2 {
+  0% {
+    -webkit-transition: translate3d(0, 0, 0);
+    transition: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-200%, 0, 0);
+            transform: translate3d(-200%, 0, 0);
+  }
 }
 .main .sc_hero .inner {
   display: -webkit-box;
